nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__multi_picker_selection_snapshot.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 86, 13)"
---
"                                                                                      "
"  Resume a session                                                                    "
"  Search ACP sessions or start fresh                                                  "
"  All  Local  Cloud                                                                   "
"    Session                              Project             Updated     Turn         "
"  ○ Start a new session                  Not reported        now         ready        "
"    Create a fresh ACP session                                                        "
"  ● Fix parser recovery (current)        nori-cli            2m ago      working      "
"    Codex is implementing parser recovery                                             "
"  ● Improve Markdown tables              codex               18m ago     waiting      "
"    Waiting for user input                                                            "
"                    ↑↓/j/k move  / search  enter toggle  esc close                    "
"                                                                                      "
