nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_empty.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 62, 10)"
---
"                                                              "
"  Resume a session                                            "
"  Search ACP sessions or start fresh                          "
"  All  Local  Cloud                                           "
"  ◇ No options available                                      "
"    The caller has not supplied any rows.                     "
"                                                              "
"                                                              "
"        ↑↓/j/k move  / search  enter select  esc close        "
"                                                              "
