nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_error.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 62, 10)"
---
"                                                              "
"  Resume a session                                            "
"  Search ACP sessions or start fresh                          "
"  All  Local  Cloud                                           "
"  × Could not load options                                    "
"    ACP session/list timed out                                "
"                                                              "
"                                                              "
"   ↑↓/j/k move  f, /, ctrl+f search  enter select  esc close  "
"                                                              "
