nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_fuzzy_filter_snapshot.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 86, 13)"
---
"                                                                                      "
"  Resume a session                                                                    "
"  Search ACP sessions or start fresh                                                  "
"  All  Local  Cloud                                                                   "
"  ⌕  mdtab                                                                            "
"                                                                                      "
"    Session                              Project             Updated     Turn         "
"  › Improve Markdown tables              codex               18m ago     waiting      "
"    Waiting for user input                                                            "
"                                                                                      "
"                                                                                      "
"  ↑↓ move  type filter  enter select  esc stop search                                 "
"                                                                                      "
