nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_loading.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 62, 10)"
---
"                                                              "
"  Resume a session                                            "
"  Search ACP sessions or start fresh                          "
"  All  Local  Cloud                                           "
"                                                              "
"  ◌ Loading sessions…                                         "
"    Results will appear without rebuilding the picker.        "
"                                                              "
"  ↑↓/j/k move  / search  enter select  esc close              "
"                                                              "
