nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_narrow_collapses_optional_columns_snapshot.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&session_picker(), 48, 13)"
---
"                                                "
"  Resume a session                              "
"  Search ACP sessions or start fresh            "
"  All  Local  Cloud                             "
"                                                "
"    Session                         Updated     "
"  › Start a new session             now         "
"    Create a fresh ACP session                  "
"    Fix parser recovery (current)   2m ago      "
"    Codex is implementing parser recovery       "
"                                                "
"  ↑↓/j/k move  / search  enter select  esc      "
"                                                "
