nori-rs/tui-components/src/picker/snapshots/nori_tui_components__picker__tests__picker_wide_with_columns_and_detail_snapshot.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&session_picker(), 124, 16)"
---
"                                                                                                                            "
"  Resume a session                                                                                                          "
"  Search ACP sessions or start fresh                                                                                        "
"  All  Local  Cloud                                                                Details                                  "
"    Session                            Project           Updated     Turn                                                   "
"  › Start a new session                Not reported      now         ready             Action │ Create a fresh ACP sessi…   "
"    Create a fresh ACP session                                                     Transcript │ No existing transcript w…   "
"    Fix parser recovery (current)      nori-cli          2m ago      working                                                "
"    Codex is implementing parser recovery                                                                                   "
"    Improve Markdown tables            codex             18m ago     waiting                                                "
"    Waiting for user input                                                                                                  "
"    Legacy unavailable session         handroll          3d ago      offline                                                "
"                                                                                                                            "
"                                                                                                                            "
"                                  ↑↓/j/k move  f, /, ctrl+f search  enter select  esc close                                 "
"                                                                                                                            "
